# janamat-pulse

./: .gitignore  README.md  package.json
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/agent/: accountability.ts  agent.ts  bus.ts  civic-agent.ts  risk.ts
backend/src/api/: civic-rest.ts  dto.ts  rest.ts  ws.ts
backend/src/config/: index.ts
backend/src/data/: civic-projects.seed.ts
backend/src/db/: index.ts
backend/src/onchain/: civic-client.ts
backend/src/scripts/: civic-smoke.ts  onchain-init.ts  onchain-opinion-smoke.ts  seed.ts  zk-smoke.ts
backend/src/services/: civic-opinion.ts  civic-sentiment.ts  executor.ts  news.ts  portfolio.ts  price.ts  sentiment.ts  wallet.ts
backend/src/types/: civic.ts  index.ts
backend/src/utils/: hash.ts  logger.ts
backend/src/zk/: verifier.ts
docs/: AUDIT.md  ZK.md
frontend/: .env.local.example  DESIGN-privy-auth.md  brand.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DecisionFeed.tsx  Header.tsx  Logo.tsx  NewsFeed.tsx  PortfolioPanel.tsx  PricePanel.tsx  SentimentGauge.tsx  Terminal.tsx  TradeBlotter.tsx  ui.tsx
frontend/lib/: civic.ts  format.ts  identicon.ts  types.ts  useAgentStream.ts  useAgentWallet.ts  useCountUp.ts  usePrivyState.ts
program/: Anchor.toml  package-lock.json  package.json
program/programs/civic_record/: Cargo.toml
program/programs/civic_record/src/: lib.rs
program/tests/: civic_record.ts
scripts/: dev.mjs
(+37 files in other folders)
