[package]
name = "civic_record"
version = "0.1.0"
description = "Janamat Pulse on-chain civic accountability ledger"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "civic_record"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# STRETCH: enable to move the record log into a concurrent Merkle tree.
# spl-account-compression = { version = "0.4.0", features = ["cpi"] }
